[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Carrier.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SplitScreen.gd" type="Script" id=2]
[ext_resource path="res://Scripts/SplitScreenCamera.gd" type="Script" id=3]

[node name="SplitScreenWorld" type="Node"]
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ViewportContainer2" type="ViewportContainer" parent="HBoxContainer"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="HBoxContainer/ViewportContainer2"]
size = Vector2( 960, 1080 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer2/Viewport2"]
current = true
script = ExtResource( 3 )

[node name="ViewportContainer1" type="ViewportContainer" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="HBoxContainer/ViewportContainer1"]
size = Vector2( 960, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="HBoxContainer/ViewportContainer1/Viewport1"]
script = ExtResource( 3 )

[node name="Carrier" parent="HBoxContainer/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_right = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.235294, 0.235294, 0.235294, 1 )
